- GTime(std::string&, GTimeReference&)
- GTime::set(std::string&)
- GTime::set(std::string&, GTimeReference&)
- GApplicationPar::time(GTimeReference&)
- GApplicationPar::time(GTime&)
- GModelSpectralNodes(GModelSpectral&, GEnergies&)

The following methods have been removed:
- n.a.

The following methods have been renamed:
- n.a.

The arguments for the following methods have been changed:
- n.a.

The return value of the following methods has been changed:
- n.a.


3. Configuration
-----------------
None


4. Application module
---------------------
A time parameter with type "t" has was to allow specifying time values in
various formats to time systems to an application. Methods were added to set
and retrieve the time value (#1864).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
A spectral model constructor was added to GModelSpectralNodes to allow
conversion of any spectral model into a spectral node model (#2178).


9. Numerics module
------------------
None


10. Observation module
----------------------
A time string constructor and set method was added to GTime to allow
setting various time formats from a string. Variants exist to set the time in
the native time reference or in a specific time reference (#1864).

A rounding error was fixed in GTime::utc() so that times such as
"2019-12-31T23:59:60" are now "2020-01-01T00:00:00" as they should be (#2177).


11. Optimization module
-----------------------
None


12. Sky module
--------------
None


13. Support module
------------------
None


14. XML module
--------------
None


15. VO module
-------------
None


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
----------------------
None


20. CTA interface
-----------------
None


21. COMPTEL interface