@@ -1,7 +1,7 @@
 /***************************************************************************
  *             GCOMObservation.cpp - COMPTEL Observation class             *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2012-2016 by Juergen Knoedlseder                         *
+ *  copyright (C) 2012-2017 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -249,13 +249,13 @@ void GCOMObservation::response(const GResponse& rsp)
 /***********************************************************************//**
  * @brief Set response function
  *
- * @param[in] rspname Name of COMPTEL response.
  * @param[in] caldb Calibration database.
+ * @param[in] rspname Name of COMPTEL response.
  *
  * Sets the response function by loading the response information from the
  * calibration database.
  ***************************************************************************/
-void GCOMObservation::response(const std::string& rspname, const GCaldb& caldb)
+void GCOMObservation::response(const GCaldb& caldb, const std::string& rspname)
 {
     // Clear COM response function
     m_response.clear();
@@ -323,7 +323,7 @@ void GCOMObservation::read(const GXmlElement& xml)
     load(drename, drbname, drgname, drxname);
 
     // Load IAQ
-    response(iaqname, GCaldb("cgro", "comptel"));
+    response(GCaldb("cgro", "comptel"), iaqname);
 
     // Return
     return;
