@@ -1,7 +1,7 @@
 /***************************************************************************
  *                       test_COM.cpp - test COM classes                   *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2012-2016 by Juergen Knoedlseder                         *
+ *  copyright (C) 2012-2017 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -238,7 +238,7 @@ void TestGCOMResponse::test_response(void)
     test_try("Test response loading");
     try {
         // Construct response from datasets
-        GCOMResponse rsp(com_iaq, GCaldb("cgro", "comptel"));
+        GCOMResponse rsp(GCaldb("cgro", "comptel"), com_iaq);
 
         // If we arrived here, signal success
         test_try_success();
@@ -585,7 +585,7 @@ void TestGCOMOptimize::test_binned_optimizer(void)
     test_try("Load binned COMPTEL observation");
     try {
         run.load(com_dre, com_drb, com_drg, com_drx);
-        run.response(com_iaq, GCaldb("cgro", "comptel"));
+        run.response(GCaldb("cgro", "comptel"), com_iaq);
         obs.append(run);
         test_try_success();
     }
